--- a/branding/supplemental-ui/uyuni/uyuni-2023/css/site-extra.css
+++ b/branding/supplemental-ui/uyuni/uyuni-2023/css/site-extra.css
@@ -682,6 +682,11 @@ div#toctitle {
   padding: 0;
 }
 
+.breadcrumbs li {
+  display: flex;
+  align-items: center;
+}
+
 .breadcrumbs li::after {
   content: "|";
   padding: 0 0.5rem;
